--- a/app/index.html
+++ b/app/index.html
@@ -14,13 +14,13 @@
 <body ng-cloak>
 
   <ul class="menu">
-    <li><a href="#/home">home</a></li>
-    <li><a href="#/chat">chat</a></li>
-    <li ng-hide="loggedIn"><a href="#/login">login</a></li>
-    <li ng-show="loggedIn"><a href="#/account">account</a></li>
+    <li><a ui-sref="/home">home</a></li>
+    <li><a ui-sref="/chat">chat</a></li>
+    <li ng-hide="loggedIn"><a ui-sref="/login">login</a></li>
+    <li ng-show="loggedIn"><a ui-sref="/account">account</a></li>
   </ul>
 
-  <div ng-view></div>
+  <div ui-view></div>
 
   <div>AngularFire-seed v<span app-version></span></div>
 
@@ -38,6 +38,7 @@
   <script src="app.js"></script>
   <script src="config.js"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
   <script src="components/appversion/appversion-directive.js"></script>
   <script src="components/auth/auth.js"></script>
   <script src="components/firebase.utils/firebase.utils.js"></script>
@@ -49,5 +50,6 @@
   <script src="account/account.js"></script>
   <script src="chat/chat.js"></script>
   <script src="login/login.js"></script>
+
 </body>
 </html>
