--- a/app/index.html
+++ b/app/index.html
@@ -14,10 +14,10 @@
 <body ng-cloak>
 
   <ul class="menu">
-    <li><a ui-sref="/home">home</a></li>
-    <li><a ui-sref="/chat">chat</a></li>
-    <li ng-hide="loggedIn"><a ui-sref="/login">login</a></li>
-    <li ng-show="loggedIn"><a ui-sref="/account">account</a></li>
+    <li><a ui-sref="home">home</a></li>
+    <li><a ui-sref="chat">chat</a></li>
+    <li ng-hide="loggedIn"><a ui-sref="login">login</a></li>
+    <li ng-show="loggedIn"><a ui-sref="account">account</a></li>
   </ul>
 
   <div ui-view></div>
