--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/firebase/firebase.js"></script>
   <script src="bower_components/angularfire/dist/angularfire.js"></script>
+  <script src="components/d3.js"></script>
 
 
   <script src="app.js"></script>
