--- a/app/chat/chat.html
+++ b/app/chat/chat.html
@@ -19,7 +19,7 @@
     }
 </style>
 <form>
-  <input placeholder="Message..." ng-model="newMessage">
+  <input placeholder="Message..." ng-model="newMessage" ng-model-options="{updateOn: 'default blur', debounce: {default: 500, blur: 0} }">
   <button type="submit" ng-click="addMessage(newMessage);newMessage = null;">send</button>
 </form>
 <!--
